
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package github.com.argoproj.argo_cd.pkg.apis.application.v1alpha1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";
import "k8s.io/apimachinery/pkg/util/intstr/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1alpha1";

// Application is a definition of Application resource.
// +genclient
// +genclient:noStatus
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message Application {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional ApplicationSpec spec = 2;

  optional ApplicationStatus status = 3;
}

// ApplicationList is list of Application resources
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message ApplicationList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated Application items = 2;
}

// ApplicationSource contains secret reference which has information about github repository, path within repository and target application environment.
message ApplicationSource {
  optional string targetRevision = 1;

  // RepoURL is repository URL which contains application project.
  optional string repoURL = 2;

  // Path is a directory path within repository which contains ksonnet project.
  optional string path = 3;

  // Environment is a ksonnet project environment name.
  optional string environment = 4;
}

// ApplicationSpec represents desired application state. Contains link to repository with application definition and additional parameters link definition revision.
message ApplicationSpec {
  optional ApplicationSource source = 1;
}

// ApplicationStatus contains information about application status in target environment.
message ApplicationStatus {
  optional ComparisonResult comparisonResult = 1;
}

// Cluster is the definition of a cluster resource
// +genclient
// +genclient:noStatus
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message Cluster {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional ClusterSpec spec = 2;
}

// ClusterList is a collection of Clusters.
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message ClusterList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated Cluster items = 2;
}

// ClusterSpec is the cluster specification
message ClusterSpec {
  // Server is the API server URL of the Kubernetes cluster
  optional string server = 1;
}

// ComparisonResult is a comparison result of application spec and deployed application.
message ComparisonResult {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.Time comparedAt = 1;

  optional ApplicationSource comparedTo = 2;

  optional string status = 3;

  optional string differenceDetails = 4;

  optional string comparisonErrorDetails = 5;
}

// Repository is a Git repository holding application configurations
message Repository {
  optional string repo = 1;

  optional string username = 2;

  optional string password = 3;
}

// RepositoryList is a collection of Repositories.
message RepositoryList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated Repository items = 2;
}

